TexiWithMe/src/main/java/com/example/texiwithme/global/error/exception/BusinessException.java
package com.example.texiwithme.global.error.exception;

import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public class BusinessException extends RuntimeException{
    public final ErrorCode errorCode;
}
